site/docs/v0.4.1/zh/components/execution-evidence.mdx
# 执行证据

执行证据记录一项可验证结果，例如测试运行、截图、报告、跟踪或无障碍快照。

<Preview class="w-full max-w-2xl">
  <article
    class="execution-evidence"
    data-state="verified"
    data-execution-evidence-primary-demo="zh"
  >
    <header>
      <div>
        <h3 data-evidence-title>组件语义覆盖</h3>
        <span data-evidence-meta>浏览器检查 · 2026-08-14 01:42</span>
      </div>
      <span data-evidence-result>已验证</span>
    </header>
    <section data-evidence-body>
      <p>116 个组件页面都渲染了匹配的语义根与机器可读状态。</p>
      <dl class="property-list" data-layout="rows" data-size="sm" data-evidence-facts>
        <div>
          <dt>结果</dt>
          <dd>116 个通过</dd>
        </div>
        <div>
          <dt>视口</dt>
          <dd>1280 × 900</dd>
        </div>
        <div>
          <dt>浏览器</dt>
          <dd>Chromium</dd>
        </div>
      </dl>
    </section>
    <footer>
      <span data-evidence-retention>证据保存在本机</span>
      <button
        type="button"
        class="btn"
        data-size="sm"
        data-variant="outline"
        data-evidence-action="open-report"
        data-preview-onclick="const root=this.closest('[data-execution-evidence-primary-demo]'); root.dataset.reportOpened='true'; this.setAttribute('aria-pressed','true');"
      >
        打开报告
      </button>
    </footer>
  </article>
</Preview>

## 用法

```html
<article class="execution-evidence" data-state="verified">
  <header>
    <h3>组件语义覆盖</h3>
    <span data-evidence-result>已验证</span>
  </header>
  <section>可观察结果与来源。</section>
  <footer>...</footer>
</article>
```

### 参数

| API                    | 取值                                                      | 用途             |
| ---------------------- | --------------------------------------------------------- | ---------------- |
| `data-state`           | `capturing`、`verified`、`unverified`、`expired`、`error` | 证据生命周期     |
| `data-evidence-result` | 必须                                                      | 文本验证结果     |
| `data-evidence-meta`   | 推荐                                                      | 时间、来源与环境 |

## 状态与变体

已验证仅表示证据支持所述结论，不代表整个任务完全正确。证据过期后继续显示，并说明使其失效的条件。

## 无障碍

证据摘要使用文本和结构化数据。截图需要有用的替代文本或相邻的文本结果。

## React

```tsx
import { ExecutionEvidence } from "@a3s-lab/ui/react";

export function Example() {
  return (
    <ExecutionEvidence data-state="verified">
      <header>
        <h3>组件语义覆盖</h3>
        <span data-evidence-result="">已验证</span>
      </header>
      <section>可观察结果与来源。</section>
      <footer>
        <a href="/reports/component-semantics">打开测试报告</a>
      </footer>
    </ExecutionEvidence>
  );
}
```

适配器只替换指南中已记录的语义根元素，不增加包装层；内部标记继续使用上方 HTML 契约。

## Vue

```vue
<script setup lang="ts">
import { ExecutionEvidence } from "@a3s-lab/ui/vue";
</script>

<template>
  <ExecutionEvidence data-state="verified">
    <header>
      <h3>组件语义覆盖</h3>
      <span data-evidence-result="">已验证</span>
    </header>
    <section>可观察结果与来源。</section>
    <footer><a href="/reports/component-semantics">打开测试报告</a></footer>
  </ExecutionEvidence>
</template>
```

适配器只替换指南中已记录的语义根元素，不增加包装层；内部标记继续使用上方 HTML 契约。
